<resources>
    <string name="app_name">CandleLight</string>
    <string name="please_open_ble">Please turn on Bluetooth first</string>
    <string name="search_device">Search device</string>
    <string name="my_device">my device</string>
    <string name="no_device">Click on me to add device</string>
    <string name="dialog_tips">Tips</string>
    <string name="delete_or_not">Delete this device or not</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="con_failure">connect failed</string>
    <string name="con_dis">Bluetooth disconnected</string>
    <string name="rename">Rename</string>
    <string name="timer_open">Timing open</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="open_mode">Open coil</string>
    <string name="shutdown_mode">Shutdown coil</string>
    <string name="timer">timer</string>
    <string name="brightness_text">brightness:</string>
</resources>
